Prepared web ui
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@108 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/web/ui/src/main/webapp/login.xhtml
+++ b/server/web/ui/src/main/webapp/login.xhtml
@@ -6,7 +6,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:rich="http://richfaces.org/rich" template="template.xhtml">
 
-	<ui:define name="title">LogStore console</ui:define>
+	<ui:define name="title">Login</ui:define>
 	<ui:define name="content">
 		<div class="logincontainer">
 			<h3>Login:</h3>
