--- a/server/web/ui/src/main/webapp/template.xhtml
+++ b/server/web/ui/src/main/webapp/template.xhtml
@@ -11,7 +11,7 @@
   lang="en">
 <head>
 <title>
-  <ui:insert name="title" />
+  Time4U : <ui:insert name="title" />
 </title>
 <ui:insert name="header" />
 </head>
