Simple account list (mostly a poc)
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@109 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/web/ui/src/main/webapp/admin/accounts.xhtml
+++ b/server/web/ui/src/main/webapp/admin/accounts.xhtml
@@ -7,6 +7,27 @@
   <ui:define name="title">Accounts</ui:define>
   <ui:define name="contentDetail">
     <h:form>
+	  <rich:dataTable value="#{admin.accountList}" var="userAccount" rowClasses="first,second" columnClasses="narrow,wide">
+        <rich:column>
+          <f:facet name="header">User Id</f:facet>
+              #{userAccount.userId}
+        </rich:column>
+        <rich:column>
+          <f:facet name="header">Name</f:facet>
+              #{userAccount.person.name}
+        </rich:column>
+        <rich:column>
+          <f:facet name="header">EMail</f:facet>
+              #{userAccount.person.email}
+        </rich:column>
+        <f:facet name="footer">
+          <rich:datascroller pageIndexVar="pageIndex" pagesVar="pages">
+            <f:facet name="pages">
+              <h:outputText value="#{pageIndex} / #{pages}"></h:outputText>
+            </f:facet>
+          </rich:datascroller>
+         </f:facet>
+      </rich:dataTable>
 	</h:form>
   </ui:define>
 </ui:composition>
