--- a/server/web/ui/src/main/webapp/main-template.xhtml
+++ b/server/web/ui/src/main/webapp/main-template.xhtml
@@ -10,7 +10,7 @@
   <ui:define name="content">
     <a4j:form>
       <rich:dropDownMenu value="Admin">
-        <rich:menuItem  submitMode="ajax" value="Accounts"  action="#{admin.accountList.enter}"/>
+        <rich:menuItem  submitMode="ajax" value="Accounts"  action="#{admin.accountListController.enter}"/>
 
       </rich:dropDownMenu>
     </a4j:form>
