--- a/server/web/ui/src/main/webapp/main-template.xhtml
+++ b/server/web/ui/src/main/webapp/main-template.xhtml
@@ -12,6 +12,7 @@
       <rich:dropDownMenu value="Admin">
         <rich:menuItem  submitMode="ajax" value="Accounts"  action="#{admin.accountListController.enter}"/>
 
+        <rich:menuItem  submitMode="ajax" value="Teams"  action="#{admin.teamListController.enter}"/>
       </rich:dropDownMenu>
     </a4j:form>
     <ui:insert name="contentDetail"/>
