--- a/server/web/ui/src/main/webapp/template.xhtml
+++ b/server/web/ui/src/main/webapp/template.xhtml
@@ -13,6 +13,9 @@
 <title>
   Time4U : <ui:insert name="title" />
 </title>
+<style type="text/css">
+	@import url(#{request.getContextPath()}/css/main.css);
+</style>
 <ui:insert name="header" />
 </head>
 <body>
