--- a/server/web/ui/src/main/webapp/admin/accounts.xhtml
+++ b/server/web/ui/src/main/webapp/admin/accounts.xhtml
@@ -1,47 +1,77 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
-  xmlns:h="http://java.sun.com/jsf/html" xmlns:s="http://jboss.com/products/seam/taglib"
-  xmlns:f="http://java.sun.com/jsf/core" xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich"
-  template="../main-template.xhtml">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:s="http://jboss.com/products/seam/taglib" xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich"
+	template="../templates/main-template.xhtml">
 
-  <ui:define name="title">Accounts</ui:define>
-  <ui:define name="contentDetail">
-    <h:form>
- 		<a4j:region renderRegionOnly="true">
-		  <rich:dataTable id="accountListTable" rows="10" value="#{admin.accountList}" var="userAccount" rowClasses="first,second" columnClasses="narrow,wide">
-	        <rich:column>
-	          <h:outputText value="*" rendered="#{userAccount.userId == admin.accountListController.selectedAccount.userId}"/>
-	        </rich:column>
-	        <rich:column>
-	          <f:facet name="header">User Id</f:facet>
-	          <a4j:commandLink action="#{admin.accountListController.select}" reRender="accountDetail" rendered="#{userAccount.userId != admin.accountListController.selectedAccount.userId}">
-	              #{userAccount.userId}
-	          </a4j:commandLink>
-	          <h:outputText value="#{userAccount.userId}" rendered="#{userAccount.userId == admin.accountListController.selectedAccount.userId}"/>
-	        </rich:column>
-	        <rich:column>
-	          <f:facet name="header">Name</f:facet>
-	              #{userAccount.person.givenName} #{userAccount.person.surname}
-	        </rich:column>
-	        <rich:column>
-	          <f:facet name="header">EMail</f:facet>
-	              #{userAccount.person.email}
-	        </rich:column>
-	        <rich:column>
-	       	  <f:facet name="header">Last login</f:facet>
-	       	      #{userAccount.lastLogin}
-	        </rich:column>
-	        <f:facet name="footer">
-	          <rich:datascroller for="accountListTable" pageIndexVar="pageIndex" pagesVar="pages">
-	            <f:facet name="pages">
-	              <h:outputText value="#{pageIndex} / #{pages}"></h:outputText>
-	            </f:facet>
-	          </rich:datascroller>
-	         </f:facet>
-	      </rich:dataTable>
-		</a4j:region>
-		<h:panelGroup id="accountDetail">
-		</h:panelGroup>
-	</h:form>
-  </ui:define>
+	<ui:define name="title">Accounts</ui:define>
+	<ui:define name="contentDetail">
+		<h:form>
+			<h:panelGroup>
+				<a4j:region renderRegionOnly="true">
+					<rich:dataTable id="accountListTable" rows="10"
+						value="#{admin.accountList}" var="userAccount" rowClasses="first,second"
+						columnClasses="narrow,wide">
+						<rich:column>
+							<h:outputText value="*"
+								rendered="#{userAccount.userId == admin.accountListController.selectedAccount.userId}" />
+						</rich:column>
+						<rich:column>
+							<f:facet name="header">User Id</f:facet>
+							<a4j:commandLink action="#{admin.accountListController.select}"
+								reRender="accountDetail"
+								rendered="#{userAccount.userId != admin.accountListController.selectedAccount.userId}">
+								#{userAccount.userId}
+						</a4j:commandLink>
+							<h:outputText value="#{userAccount.userId}"
+								rendered="#{userAccount.userId == admin.accountListController.selectedAccount.userId}" />
+						</rich:column>
+						<rich:column>
+							<f:facet name="header">Name</f:facet>
+							#{userAccount.person.givenName} #{userAccount.person.surname}
+						</rich:column>
+						<rich:column>
+							<f:facet name="header">EMail</f:facet>
+							#{userAccount.person.email}
+						</rich:column>
+						<rich:column>
+							<f:facet name="header">Last login</f:facet>
+							#{userAccount.lastLogin}
+						</rich:column>
+						<f:facet name="footer">
+							<rich:datascroller for="accountListTable"
+								pageIndexVar="pageIndex" pagesVar="pages">
+								<f:facet name="pages">
+									<h:outputText value="#{pageIndex} / #{pages}"></h:outputText>
+								</f:facet>
+							</rich:datascroller>
+						</f:facet>
+					</rich:dataTable>
+				</a4j:region>
+				<h:panelGroup id="accountDetail">
+					<table>
+						<s:decorate template="../templates/decorateTableField.xhtml">
+							<ui:define name="label">UserId</ui:define>
+							<h:outputText
+								value="#{admin.accountListController.selectedAccount.userId}" />
+						</s:decorate>
+						<s:decorate template="../templates/decorateTableField.xhtml">
+							<ui:define name="label">Password</ui:define>
+							<h:inputSecret  required="true" value="#{admin.passwordConfirm.password}" />
+						</s:decorate>
+						<s:decorate template="../templates/decorateTableField.xhtml">
+							<ui:define name="label">Password Confirm</ui:define>
+							<h:inputSecret  required="true" id="passwordConfirm"  value="#{admin.passwordConfirm.passwordConfirm}" />
+						</s:decorate>
+						<tr>
+							<td colspan="3">
+								<h:commandButton action="#{admin.accountListController.resetPassword}" value="Reset Password"/>
+							</td>
+						</tr>
+					</table>
+				</h:panelGroup>
+			</h:panelGroup>
+		</h:form>
+	</ui:define>
 </ui:composition>
