--- a/server/web/ui/src/main/webapp/admin/teams.xhtml
+++ b/server/web/ui/src/main/webapp/admin/teams.xhtml
@@ -1,32 +1,50 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
-  xmlns:h="http://java.sun.com/jsf/html" xmlns:s="http://jboss.com/products/seam/taglib"
-  xmlns:f="http://java.sun.com/jsf/core" xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich"
-  template="../main-template.xhtml">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:s="http://jboss.com/products/seam/taglib" xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich"
+	template="../templates/main-template.xhtml">
 
-  <ui:define name="title">Teams</ui:define>
-  <ui:define name="contentDetail">
-    <h:form>
-	  <rich:dataTable id="teamListTable" rows="10" value="#{admin.teamList}" var="team" rowClasses="first,second" columnClasses="narrow,wide">
-        <rich:column>
-          <h:outputText value="*" rendered="#{team.id == admin.teamListController.selectedTeam.id}"/>
-        </rich:column>
-        <rich:column>
-         <f:facet name="header">Team Id</f:facet>
-              #{team.id}
-        </rich:column>
-        <rich:column>
-          <f:facet name="header">Name</f:facet>
-              #{team.name}
-        </rich:column>
-        <f:facet name="footer">
-          <rich:datascroller for="teamListTable" pageIndexVar="pageIndex" pagesVar="pages">
-            <f:facet name="pages">
-              <h:outputText value="#{pageIndex} / #{pages}"></h:outputText>
-            </f:facet>
-          </rich:datascroller>
-         </f:facet>
-      </rich:dataTable>
-	</h:form>
-  </ui:define>
+	<ui:define name="title">Teams</ui:define>
+	<ui:define name="contentDetail">
+		<h:form>
+			<h:panelGroup>
+				<a4j:region renderRegionOnly="true">
+					<rich:dataTable id="teamListTable" rows="10"
+						value="#{admin.teamList}" var="team" rowClasses="first,second"
+						columnClasses="narrow,wide">
+						<rich:column>
+							<h:outputText value="*"
+								rendered="#{team.id == admin.teamListController.selectedTeam.id}" />
+						</rich:column>
+						<rich:column>
+							<f:facet name="header">Team Id</f:facet>
+							#{team.id}
+						</rich:column>
+						<rich:column>
+							<f:facet name="header">Name</f:facet>
+							<a4j:commandLink action="#{admin.teamListController.select}"
+								reRender="teamDetail"
+								rendered="#{team.id != admin.teamListController.selectedTeam.id}">
+								#{team.name}
+						</a4j:commandLink>
+							<h:outputText value="#{team.name}"
+								rendered="#{team.id == admin.teamListController.selectedTeam.id}" />
+						</rich:column>
+						<f:facet name="footer">
+							<rich:datascroller for="teamListTable"
+								pageIndexVar="pageIndex" pagesVar="pages">
+								<f:facet name="pages">
+									<h:outputText value="#{pageIndex} / #{pages}"></h:outputText>
+								</f:facet>
+							</rich:datascroller>
+						</f:facet>
+					</rich:dataTable>
+				</a4j:region>
+				<h:panelGroup id="teamDetail" columns="2">
+
+				</h:panelGroup>
+			</h:panelGroup>
+		</h:form>
+	</ui:define>
 </ui:composition>
