--- a/server/web/ui/src/main/webapp/user/main.xhtml
+++ b/server/web/ui/src/main/webapp/user/main.xhtml
@@ -2,7 +2,7 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
   xmlns:h="http://java.sun.com/jsf/html" xmlns:s="http://jboss.com/products/seam/taglib"
   xmlns:f="http://java.sun.com/jsf/core" xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich"
-  template="../main-template.xhtml">
+  template="../templates/main-template.xhtml">
 
   <ui:define name="title">Main</ui:define>
   <ui:define name="contentDetail">
