Team creation and modification somewhat working
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@130 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/web/ui/src/main/webapp/admin/accounts.xhtml
+++ b/server/web/ui/src/main/webapp/admin/accounts.xhtml
@@ -19,7 +19,7 @@
 						</rich:column>
 						<rich:column>
 							<f:facet name="header">User Id</f:facet>
-							<a4j:commandLink action="#{admin.accountListController.select}"
+							<a4j:commandLink action="#{admin.accountListController.select(userAccount)}"
 								reRender="accountDetail"
 								rendered="#{userAccount.userId != admin.accountListController.selectedAccount.userId}">
 								#{userAccount.userId}
