--- a/server/web/ui/src/main/webapp/user/main.xhtml
+++ b/server/web/ui/src/main/webapp/user/main.xhtml
@@ -1,12 +1,40 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
-  xmlns:h="http://java.sun.com/jsf/html" xmlns:s="http://jboss.com/products/seam/taglib"
-  xmlns:f="http://java.sun.com/jsf/core" xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich"
-  template="../templates/main-template.xhtml">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:s="http://jboss.com/products/seam/taglib" xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich"
+	template="../templates/main-template.xhtml">
 
-  <ui:define name="title">Main</ui:define>
-  <ui:define name="contentDetail">
-    <h:form>
-	</h:form>
-  </ui:define>
+	<ui:define name="title">Main</ui:define>
+	<ui:define name="contentDetail">
+		<h:form>
+			<rich:dataTable value="#{user.workItemListController.workItems}"
+				var="workItem" rowClasses="first,second" columnClasses="narrow,wide">
+				<rich:column>
+					<f:facet name="header">Day</f:facet>
+					#{workItem.day}
+				</rich:column>
+				<rich:column>
+					<f:facet name="header">Begin</f:facet>
+					#{workItem.begin}
+				</rich:column>
+				<rich:column>
+					<f:facet name="header">End</f:facet>
+					#{workItem.end}
+				</rich:column>
+				<rich:column>
+					<f:facet name="header">Project Id</f:facet>
+					#{workItem.projectId}
+				</rich:column>
+				<rich:column>
+					<f:facet name="header">Task Id</f:facet>
+					#{workItem.taskId}
+				</rich:column>
+				<rich:column>
+					<f:facet name="header">Comment</f:facet>
+					#{workItem.comment}
+				</rich:column>
+			</rich:dataTable>
+		</h:form>
+	</ui:define>
 </ui:composition>
