GroupBy Reports working (depth=1)
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@155 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/web/ui/src/main/webapp/user/monthReport.xhtml
+++ b/server/web/ui/src/main/webapp/user/monthReport.xhtml
@@ -23,6 +23,15 @@
 						value="#{user.monthReportController.selectedMonth.year}" minValue="1900"
 						maxValue="2500" step="1" />
 				</s:decorate>
+				<s:decorate template="../templates/decorateTableField.xhtml">
+					<ui:define name="label">Variant</ui:define>
+					<h:selectOneMenu
+						value="#{user.monthReportController.variant}">
+						<s:selectItems value="#{user.monthReportController.variants}"
+							var="variant"  label="#{variant.label}" />
+						<s:convertEnum/>
+					</h:selectOneMenu>
+				</s:decorate>
 				<tr>
 					<td colspan="3">
 						<a4j:commandButton action="#{user.monthReportController.generate}"
