Reports are now configured via xml. (It is now exreemly simple to store report definitions in database.)
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@169 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/web/ui/src/main/webapp/user/parameter/month.xhtml
+++ b/server/web/ui/src/main/webapp/user/parameter/month.xhtml
@@ -4,14 +4,14 @@
 	xmlns:s="http://jboss.com/products/seam/taglib" xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich">
 	<table>
-		<s:decorate template="../templates/decorateTableField.xhtml">
+		<s:decorate template="../../templates/decorateTableField.xhtml">
 			<ui:define name="label">Month</ui:define>
 			<h:selectOneMenu value="#{parameter.month}">
 				<s:selectItems value="#{parameter.monthValues}"
 					var="month" itemValue="#{month.value}" label="#{month.label}" />
 			</h:selectOneMenu>
 		</s:decorate>
-		<s:decorate template="../templates/decorateTableField.xhtml">
+		<s:decorate template="../../templates/decorateTableField.xhtml">
 			<ui:define name="label">Year</ui:define>
 			<rich:inputNumberSpinner
 				value="#{parameter.year}" minValue="1900"
