--- a/server/web/ui/src/main/webapp/user/parameter/month.xhtml
+++ b/server/web/ui/src/main/webapp/user/parameter/month.xhtml
@@ -3,19 +3,12 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:s="http://jboss.com/products/seam/taglib" xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich">
-	<table>
-		<s:decorate template="../../templates/decorateTableField.xhtml">
-			<ui:define name="label">Month</ui:define>
-			<h:selectOneMenu value="#{parameter.month}">
-				<s:selectItems value="#{parameter.monthValues}"
-					var="month" itemValue="#{month.value}" label="#{month.label}" />
-			</h:selectOneMenu>
-		</s:decorate>
-		<s:decorate template="../../templates/decorateTableField.xhtml">
-			<ui:define name="label">Year</ui:define>
-			<rich:inputNumberSpinner
-				value="#{parameter.year}" minValue="1900"
-				maxValue="2500" step="1" />
-		</s:decorate>
-	</table>
+	<s:div>
+		<h:selectOneMenu value="#{parameter.month}">
+			<s:selectItems value="#{parameter.monthValues}" var="month"
+				itemValue="#{month.value}" label="#{month.label}" />
+		</h:selectOneMenu>
+		<rich:inputNumberSpinner value="#{parameter.year}"
+			minValue="1900" maxValue="2500" step="1" />
+	</s:div>
 </ui:composition>
