Added change password dialog
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@173 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/web/ui/src/main/webapp/admin/accounts.xhtml
+++ b/server/web/ui/src/main/webapp/admin/accounts.xhtml
@@ -61,11 +61,11 @@
 								</s:decorate>
 								<s:decorate template="../templates/decorateTableField.xhtml">
 									<ui:define name="label">Password</ui:define>
-									<h:inputSecret value="#{admin.passwordConfirm.password}" />
+									<h:inputSecret value="#{common.passwordConfirm.password}" />
 								</s:decorate>
 								<s:decorate template="../templates/decorateTableField.xhtml">
 									<ui:define name="label">Password Confirm</ui:define>
-									<h:inputSecret value="#{admin.passwordConfirm.passwordConfirm}" />
+									<h:inputSecret value="#{common.passwordConfirm.passwordConfirm}" />
 								</s:decorate>
 								<tr>
 									<td colspan="3">
