--- a/server/web/gwt/src/main/webapp/MainUI.html
+++ b/server/web/gwt/src/main/webapp/MainUI.html
@@ -23,7 +23,10 @@
 
     <table align="center">
     	<tr>
-    		<td>I'm here</td>
+    		<td id="mainMenu"/>
+    	</tr>
+    	<tr>
+    		<td id="projectTree"/>
     	</tr>
     </table>
   </body>
