--- a/server/web/gwt/war/MainUI.html
+++ b/server/web/gwt/war/MainUI.html
@@ -21,9 +21,12 @@
       </div>
     </noscript>
 
-    <table align="center">
+    <table align="center" border="1">
     	<tr>
-    		<td>I'm here</td>
+    		<td id="mainMenu"/>
+    	</tr>
+    	<tr>
+    		<td id="projectTree"/>
     	</tr>
     </table>
   </body>
