Added simple calendar view

--- a/server/web/gwt/src/main/webapp/MainUI.html
+++ b/server/web/gwt/src/main/webapp/MainUI.html
@@ -27,7 +27,12 @@
     	</tr>
     	<tr>
     		<td id="projectTree"/>
+    	<tr/>
+    	<tr>
     		<td id="taskList"/>
+    	</tr>
+    	<tr>
+    		<td id="calendarView"/>
     	</tr>
     </table>
   </body>
