--- a/server/web/gwt/war/MainUI.html
+++ b/server/web/gwt/war/MainUI.html
@@ -3,6 +3,8 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	
+	<meta name="gwt:property" content="locale=de">
 
     <link type="text/css" rel="stylesheet" href="MainUI.css">
     
@@ -27,6 +29,9 @@
     	</tr>
     	<tr>
     		<td id="projectTree"/>
+    		<td id="calendarView"/>
+    	</tr>
+    	<tr>
     		<td id="taskList"/>
     	</tr>
     </table>
