--- a/server/web/gwt/src/main/webapp/MainUI.html
+++ b/server/web/gwt/src/main/webapp/MainUI.html
@@ -23,11 +23,12 @@
 
     <table align="center">
     	<tr>
-    		<td id="mainMenu"/>
+    		<td colspan="2" id="mainMenu"/>
     	</tr>
     	<tr>
     		<td id="projectTree"/>
-    	<tr/>
+    		<td rowspan="2" id="workItemList"/>
+    	</tr>
     	<tr>
     		<td id="taskList"/>
     	</tr>
