--- a/server/web/gwt/war/MainUI.html
+++ b/server/web/gwt/war/MainUI.html
@@ -25,14 +25,17 @@
 
     <table align="center" border="1">
     	<tr>
-    		<td id="mainMenu"/>
+    		<td colspan="2" id="mainMenu"/>
     	</tr>
     	<tr>
     		<td id="projectTree"/>
-    		<td id="calendarView"/>
+    		<td rowspan="2" id="workItemList"/>
     	</tr>
     	<tr>
     		<td id="taskList"/>
+    	</tr>
+    	<tr>
+    		<td id="calendarView"/>
     	</tr>
     </table>
   </body>
