Some more dialog functionality

--- a/server/web/gwt/war/MainUI.html
+++ b/server/web/gwt/war/MainUI.html
@@ -23,7 +23,7 @@
       </div>
     </noscript>
 
-    <table align="center" border="1">
+    <table align="center">
     	<tr>
     		<td colspan="2" id="mainMenu"/>
     	</tr>
