Use layout panels

--- a/server/web/gwt/war/MainUI.html
+++ b/server/web/gwt/war/MainUI.html
@@ -23,20 +23,6 @@
       </div>
     </noscript>
 
-    <table align="center">
-    	<tr>
-    		<td colspan="2" id="mainMenu"/>
-    	</tr>
-    	<tr>
-    		<td id="projectTree"/>
-    		<td rowspan="2" id="workItemList"/>
-    	</tr>
-    	<tr>
-    		<td id="taskList"/>
-    	</tr>
-    	<tr>
-    		<td id="calendarView"/>
-    	</tr>
-    </table>
+	<div id="mainPage"/>
   </body>
 </html>
