--- a/server/web/gwt/src/main/webapp/MainUI.html
+++ b/server/web/gwt/src/main/webapp/MainUI.html
@@ -3,6 +3,8 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	
+	<meta name="gwt:property" content="locale=de">
 
     <link type="text/css" rel="stylesheet" href="MainUI.css">
     
@@ -21,20 +23,6 @@
       </div>
     </noscript>
 
-    <table align="center">
-    	<tr>
-    		<td colspan="2" id="mainMenu"/>
-    	</tr>
-    	<tr>
-    		<td id="projectTree"/>
-    		<td rowspan="2" id="workItemList"/>
-    	</tr>
-    	<tr>
-    		<td id="taskList"/>
-    	</tr>
-    	<tr>
-    		<td id="calendarView"/>
-    	</tr>
-    </table>
+	<div id="mainPage"/>
   </body>
 </html>
