--- a/server/web/gwt/war/LoginUI.html
+++ b/server/web/gwt/war/LoginUI.html
@@ -6,6 +6,7 @@
 	
 	<meta name="gwt:property" content="locale=de">
 
+    <link type="text/css" rel="stylesheet" href="gwt-standard.css">
     <link type="text/css" rel="stylesheet" href="MainUI.css">
 
     <title>Time4U Login</title>
