--- a/server/web/gwt/src/main/webapp/LoginUI.html
+++ b/server/web/gwt/src/main/webapp/LoginUI.html
@@ -6,6 +6,7 @@
 	
 	<meta name="gwt:property" content="locale=de">
 
+    <link type="text/css" rel="stylesheet" href="gwt-standard.css">
     <link type="text/css" rel="stylesheet" href="MainUI.css">
 
     <title>Time4U Login</title>
@@ -23,7 +24,7 @@
       </div>
     </noscript>
 
-    <table align="center">
+    <table align="center" border="1">
     	<tr>
     		<td id="loginPanel"/>
     	</tr>
