--- a/server/web/gwt/src/main/webapp/MainUI.html
+++ b/server/web/gwt/src/main/webapp/MainUI.html
@@ -7,6 +7,7 @@
 	<meta name="gwt:property" content="locale=de">
 
     <link type="text/css" rel="stylesheet" href="MainUI.css">
+    <link type="text/css" rel="stylesheet" href="gwt-standard.css">
     
     <title>Time4U</title>
  
